sumo/tests/duarouter/trips/errors/vehicle_false_departlane/errors.duarouter
Error: Invalid departlane definition for vehicle ''
Quitting (on error).
